Sat Feb 22 01:06:22 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/conv.m: Check inputs with is_vector(), not is_matrix().
	* polynomial/deconv.m: Likewise.
	* polynomial/polyderiv.m: Likewise.
	* polynomial/polyinteg.m: Likewise.
	* polynomial/polyreduce.m: Likewise.
	* polynomial/polyval.m: Likewise.
	* polynomial/polyvalm.m: Likewise.
	* general/postpad.m: Likewise.
	* general/prepad.m: Likewise.

	* polynomial/compan.m: Check input with is_vector(), not
	is_matrix().  Handle scalar case.

Fri Feb 21 13:36:58 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/contour.m: Order data so that it is consistent with
	meshgrid and mesh.

	* plot/meshdom.m, plot/meshgrid.m: Change help message.
	* plot/sombrero.m: Use meshgrid, not meshdom.

Thu Feb 20 02:58:05 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0.4 released.

Wed Feb 19 10:30:14 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/paren.m: New file.

Tue Feb 18 09:22:04 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0.3 released.

Thu Feb 13 19:06:42 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/saveimage.m: Only clip image data that is actually out of
	range.

Sun Feb  9 19:52:08 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/is_matrix.m: Scalars, vectors, and empty matrices may
	also be considered to be matrices.

	* general/is_vector.m: Scalars may also be considered to be vectors.

	* general/isempty.m: Use size(), not rows() and columns().

	* plot/contour.m: Convert set to gset.
	Set view to 0, 0, 1, 1, not 0, 0, 1.9, 1.

Fri Feb  7 12:55:55 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Fix typo in last change.

Fri Jan 31 09:30:16 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/loadimage.m: Make it possible to load files with image
	data named X or img.

	* image/default.img: Change name of image from X to img to match
	what saveimage does now.
